--- a/app/assets/stylesheets/work.scss
+++ b/app/assets/stylesheets/work.scss
@@ -86,6 +86,9 @@
         letter-spacing: 3px;
         margin-bottom: 40px;
     }
+    .row{
+        margin: 0px;
+    }
     .col-three{
         width:25%;
         padding: 15px;
